--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,14 @@
- Options +FollowSymlinks
-RewriteEngine On
+<IfModule mod_rewrite.c>
+    Options +FollowSymlinks
+    RewriteEngine On
+</IfModule>
  
-# if a directory or a file exists, use it directly
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+<IfModule mod_rewrite.c>
+    RewriteCond %{REQUEST_URI} ^/.*
+    RewriteRule ^(.*)$ testdrive/$1 [L]
 
-# otherwise forward it to index.php
-RewriteRule . testdrive/index.php
+    RewriteCond %{REQUEST_URI} !^/testdrive/
+    RewriteCond %{REQUEST_FILENAME} !-f 
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^.*$ testdrive/index.php
+</IfModule>
